Updated index and burger-block handlebars templates to show list of burgers eaten and to devour

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,17 +1,18 @@
+<h2>Burgers To Devour</h2>
 <ul>
-  {{#each dogs}}
+  {{#each burgers}}
     {{#unless devoured}}
-      {{> burgers/burger-block devoured=true}}
+      {{> burgers/burger-block devoured=false}}
     {{/unless}}
   {{/each}}
 </ul>
 
-<h2>Cats that are sleepy!</h2>
+<h2>Burgers I've Eaten</h2>
 
 <ul>
-  {{#each cats}}
-    {{#if sleepy}}
-      {{> burgers/burger-block devoured=false}}
+  {{#each burgers}}
+    {{#if devoured}}
+      {{> burgers/burger-block devoured=true}}
     {{/if}}
   {{/each}}
 </ul>
