--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,8 +1,8 @@
 <li>
-	{{name}}
+	{{burger_name}}
 
 	<button class="devour-burger" data-id="{{id}}" data-devoured="{{devoured}}">
-		{{#if sleep}}DEVOUR{{else}}EAT AGAIN!{{/if}}
+		{{#if devoured}}EAT AGAIN!{{else}}DEVOUR{{/if}}
 	</button>
 
 	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
