Added event listener to burger.js to devour/ eat again buttons.  Makes ajax put request

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,8 +1,8 @@
 <li>
 	{{burger_name}}
 
-	<button class="devour-burger" data-id="{{id}}" data-devoured="{{devoured}}">
-		{{#if devoured}}EAT AGAIN!{{else}}DEVOUR{{/if}}
+	<button class="devour-state" data-id="{{id}}" data-devoured="{{devoured}}">
+		{{#if devoured}}DEVOUR{{else}}EAT AGAIN!{{/if}}
 	</button>
 
 	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
