Added burger submission form and event listener for submit button.  Makes an AJAX request to post the new burger

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
 	{{burger_name}}
 
-	<button class="devour-state" data-id="{{id}}" data-devoured="{{devoured}}">
+	<button class="devour-state btn" data-id="{{id}}" data-devoured="{{devoured}}">
 		{{#if devoured}}DEVOUR{{else}}EAT AGAIN!{{/if}}
 	</button>
 
