--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -16,3 +16,11 @@
     {{/if}}
   {{/each}}
 </ul>
+
+<form>
+  <div class="mb-3">
+    <label for="burgerInput" class="form-label">Add a burger to devour!</label>
+    <input type="text" class="form-control" id="burgerInput">
+  </div>
+  <button type="submit" class="btn btn-primary" id="submit">Submit</button>
+</form>
