--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="./assets/css/burger_style.css">
     </head>
     <body>
+        <header class="container-fluid display-3 p-2">Burger Eater!</header>
         {{{ body }}}
         <script src="./assets/js/burger.js" async defer></script>
     </body>
