--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,9 +1,40 @@
 body {
-    background-color: #de3c2d;
+    background-color: #fffaf0;
 }
 
 header {
-    background-color: #fbaf41;
+    background-color: #f2ba49;
     text-align: center;
     color: #644117;
+}
+
+.burger-footer {
+    background-color: #f2ba49;
+    border-radius: 0px 0px 30px 30px;
+    color: transparent;
+    padding: 5px;
+}
+
+.burger-header {
+    background-color: #f2ba49;
+    border-radius: 30px 30px 0px 0px;
+    margin-bottom: 0px;
+    padding: 5px;
+}
+
+.list-group {
+    padding-right: 0px;
+    border-radius: 10px;
+}
+
+.list-group-item {
+    background-color: #644117;
+    color: rgb(250, 111, 111);
+    border-radius: 10px;
+    margin: 3px;
+
+}
+
+#addBurger {
+    background-color: #b0bf1a;
 }
