--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container mt-4">
     <div class="row">
         <div class="col-3"></div>
-        <div class="col-6">
+        <div class="col-6" id="addBurger">
             <form>
                 <div class="mb-3">
                     <label for="burgerInput" class="form-label">Add a burger to devour!</label>
@@ -12,26 +12,33 @@
         </div>
         <div class="col-3"></div>
     </div>
-    <div class="row">
-        <div class="col-6">
-            <h2>Burgers To Devour</h2>
-            <ul>
-                {{#each burgers}}
-                {{#unless devoured}}
-                {{> burgers/burger-block devoured=true}}
-                {{/unless}}
-                {{/each}}
-            </ul>
+    <div class="row mt-4">
+        <div class="col-5">
+            <div class="row h2 burger-header justify-content-center">Burgers To Devour</div>
+            <div class="row">
+                <ul class="list-group">
+                    {{#each burgers}}
+                    {{#unless devoured}}
+                    {{> burgers/burger-block devoured=true}}
+                    {{/unless}}
+                    {{/each}}
+                </ul>
+            </div>
+            <div class="row h2 burger-footer text-center">_</div>
         </div>
-        <div class="col-6">
-            <h2>Burgers I've Eaten</h2>
-            <ul>
-                {{#each burgers}}
-                {{#if devoured}}
-                {{> burgers/burger-block devoured=false}}
-                {{/if}}
-                {{/each}}
-            </ul>
+        <div class="col-2"></div>
+        <div class="col-5 class="burger">
+            <div class="row h2 burger-header justify-content-center">Burgers I've Eaten</div>
+            <div class="row">
+                <ul class="list-group">
+                    {{#each burgers}}
+                    {{#if devoured}}
+                    {{> burgers/burger-block devoured=false}}
+                    {{/if}}
+                    {{/each}}
+                </ul>
+            </div>
+            <div class="row h2 burger-footer text-center">_</div>
         </div>
     </div>
 
