--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,4 +1,4 @@
-<li>
+<li class="list-group-item">
 	{{burger_name}}
 
 	<button class="devour-state btn" data-id="{{id}}" data-devoured="{{devoured}}">
