--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
         <div class="col-6" id="addBurger">
             <form>
                 <div class="mb-3">
-                    <label for="burgerInput" class="form-label">Add a burger to devour!</label>
+                    <label for="burgerInput" class="form-label h2">Add a burger to devour!</label>
                     <input type="text" class="form-control" id="burgerInput">
                 </div>
                 <button type="submit" class="btn btn-primary" id="submit">Submit</button>
