Changed spacing between devoured and eaten burger lists

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,8 +12,8 @@
         </div>
         <div class="col-3"></div>
     </div>
-    <div class="row mt-4">
-        <div class="col-5">
+    <div class="row mt-4 justify-content-center">
+        <div class="col-5 mx-2">
             <div class="row h2 burger-header justify-content-center">Burgers To Devour</div>
             <div class="row">
                 <ul class="list-group">
@@ -26,8 +26,8 @@
             </div>
             <div class="row h2 burger-footer text-center">_</div>
         </div>
-        <div class="col-2"></div>
-        <div class="col-5 class="burger">
+        {{!-- <div class="col-2"></div> --}}
+        <div class="col-5 mx-2">
             <div class="row h2 burger-header justify-content-center">Burgers I've Eaten</div>
             <div class="row">
                 <ul class="list-group">
