--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -3,8 +3,8 @@
 
 	<span class="burger-btns">
 		<button class="devour-state btn burger-btn-devour" data-id="{{id}}" data-devoured="{{devoured}}">
-			{{#if devoured}}DEVOUR{{else}}EAT AGAIN!{{/if}}
+			{{#if devoured}}DEVOUR{{else}}EAT AGAIN{{/if}}
 		</button>
-		<button class="delete-burger btn burger-btn-delete" data-id="{{this.id}}">DELETE!</button>
+		<button class="delete-burger btn burger-btn-delete" data-id="{{this.id}}">DELETE</button>
 	</span>
 </li>
