--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -1,11 +1,4 @@
-/* body {
-    background-color:white;
-    background-image: 
-        linear-gradient(90deg, rgba(0,100,200,.5) 50%, transparent 50%),
-        linear-gradient(rgba(0,100,200,.5) 50%, transparent 50%);
-    background-size:50px 50px;
-} */
-
+/* ELEMENT SELECTORS */
 body {
     background-image: url("../images/wood.jpg");
     background-repeat: repeat;
@@ -18,7 +11,7 @@ header {
 }
 
 
-
+/* CLASS SELECTORS */
 .burger-btn-devour {
     background-color: #004209;
     color: white;
@@ -72,6 +65,7 @@ header {
 
 }
 
+/* ID SELECTORS */
 #addBurger {
     background-color:white;
     background-image: 
